updates w.r.t. Java 25